# acow_nt_posix

./: .gitignore  CMakeLists.txt
acow/: nt_posix.h  unistd.h  utsname.h
acow/posix/cross/: unistd.h  utsname.h
acow/posix/cross/src/win32/: utsname.cpp
acow/src/win32/: utsname.cpp
